--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            outputFileName = "WSProxy-${defaultConfig.versionName}-${defaultConfig.versionCode}.apk"
+        }
+    }
 }
 
 dependencies {
